--- a/vue/read/demo/new-Vue.html
+++ b/vue/read/demo/new-Vue.html
@@ -14,9 +14,9 @@
   </div>
   <script>
     Vue.component('my-component', {
-      template: `<div>component<a-a></a-a></div>`
+      template: `<div>component</div>`
     })
-    var vm = new Vue({
+    var vm = Vue({
       el: '#app',
       created () {
       }
