--- a/vue/read/demo/new-Vue.html
+++ b/vue/read/demo/new-Vue.html
@@ -13,14 +13,20 @@
     <my-component></my-component>
   </div>
   <script>
-    Vue.component('my-component', {
-      template: `<div>component</div>`
-    })
-    var vm = Vue({
-      el: '#app',
-      created () {
-      }
-    })
+    // Vue.component('my-component', {
+    //   template: `<a>component</a>`,
+    //   data () {
+    //     return {
+    //       message: 'message'
+    //     }
+    //   }
+    // })
+    // var vm = new Vue({
+    //   el: '#app',
+    //   created () {
+    //     console.log(this)
+    //   }
+    // })
   </script>
 </body>
 </html>
