--- a/read/demo/new-Vue.html
+++ b/read/demo/new-Vue.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="../../dist/vue.js"></script>
+  <script src="../../vue/dist/vue.js"></script>
 </head>
 <body>
   <div id="app">
     <p></p>
-    <my-component></my-component>
   </div>
   <script>
     // Vue.component('my-component', {
@@ -21,12 +20,13 @@
     //     }
     //   }
     // })
-    // var vm = new Vue({
-    //   el: '#app',
-    //   created () {
-    //     console.log(this)
-    //   }
-    // })
+    var vm = new Vue({
+      el: '#app',
+      created () {
+        console.log(this)
+      },
+      inject: ['value']
+    })
   </script>
 </body>
 </html>
