update:day02 _init()流程

--- a/read/demo/new-Vue.html
+++ b/read/demo/new-Vue.html
@@ -22,10 +22,12 @@
     // })
     var vm = new Vue({
       el: '#app',
+      data: {
+        'key': 'value'
+      },
       created () {
         console.log(this)
-      },
-      inject: ['value']
+      }
     })
   </script>
 </body>
