--- a/read/demo/new-Vue.html
+++ b/read/demo/new-Vue.html
@@ -9,24 +9,30 @@
 </head>
 <body>
   <div id="app">
-    <p></p>
+      <my-component test/>
   </div>
   <script>
-    // Vue.component('my-component', {
-    //   template: `<a>component</a>`,
-    //   data () {
-    //     return {
-    //       message: 'message'
-    //     }
-    //   }
-    // })
+    Vue.component('my-component', {
+      template: `<a>component</a>`,
+      data () {
+        return {
+          message: 'message'
+        }
+      },
+      methods: {
+        testMethod (a) {
+        }
+      },
+      mounted () {
+        setTimeout(()=>{
+          console.log(this.testMethod)
+        }, 1000)
+      }
+    })
     var vm = new Vue({
       el: '#app',
       data: {
         'key': 'value'
-      },
-      created () {
-        console.log(this)
       }
     })
   </script>
